# prism

./: .gitignore  EXPERIMENT_LOG.md  FUSED_KERNEL_TASK.md  GPU_RUNBOOK.md  HYBRID_V2_LOG.md  PAPER_EXPERIMENT_PLAN.md  PRISM_Experiment_Plan.md  PRISM_RETROSPECTIVE.md  PRISM_Technical_Report.docx  PRISM_Technical_Report.txt  PROGRESS.md  README.md  RESEARCH_SUMMARY.md  baseline_transformer.py  bench_fused_scan.py  benchmark_ablations.py  benchmark_hybrid.py  benchmark_hybrid_v2.py  benchmark_loco.py  benchmark_quality.py  benchmark_real_data.py  benchmark_scaling.py  benchmark_v2_ablations.py  causal_prism_plan.md  dry_run.py  eval_checkpoint.py  hybrid_planv2.md  hybrid_prism.py  investigate.py  linear_rnn.py  mamba_bidir.py  paper_components.py  paper_dev_plan.md  paper_exp1_controlled.py  paper_exp2_efficiency.py  paper_exp3_ablations.py  paper_exp4_longembed.py  paper_exp5_beir.py  paper_exp6_pretrain.py  paper_exp7_scaleup.py  (+10 more)
archive/code/: hybrid_prism.py  run_all_v2.py
archive/docs/: PRISM_v2fixes.txt  hybrid_v2_dev_plan.md  hydbrid_arch_plan.md
data/: beir_eval.py  loco_eval.py  longembed_eval.py  msmarco.py
results/: quality_results.json  scaling_results.json
results/20260317/: ablation_results.json  investigation_results.json  scaling_results.json  summary.json
results/20260318/: real_data_results.json
results/20260318_runv2/: ablation_results.json  quality_results.json  real_data_results.json  scaling_results.json  summary_v2.json  v2_ablation_results.json
results/hybrid/: log.txt  log_expt1.txt  log_expt4.txt
results/hybrid_v2/: log.txt
(+7 files in other folders)
