[project]
name = "prism"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.10.0",
    "torch>=2.10.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
paper = [
    "mteb>=1.0.0",
]
mamba = [
    "mamba-ssm>=2.0.0",
]
